add setting file

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@
 .sfdx/
 .localdevserver/
 
-# LWC VSCode autocomplete
-**/lwc/jsconfig.json
-
 # Logs
 logs
 *.log
@@ -30,3 +27,12 @@ Thumbs.db
 ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
+
+.classpath  
+.project 
+.salesforce 
+.vscode 
+.idea 
+.tern-project 
+.settings 
+IlluminatedCloud/
