--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "trailingComma": "none",
+  "tabWidth": 2,
+  "printWidth": 80,
   "overrides": [
     {
       "files": "**/lwc/**/*.html",
@@ -8,6 +10,12 @@
     {
       "files": "*.{cmp,page,component}",
       "options": { "parser": "html" }
+    },
+    {
+      "files": "**.cls",
+      "options": {
+        "tabWidth": 4
+      }
     }
   ]
 }
